# kotlin

./: .gitignore  README.md  TESTING.md  build.gradle.kts  settings.gradle.kts  show-reply-payloads.kt
.maestro/: image-gallery-test.yaml  video-upload-test.yaml
chirp/: build.gradle.kts
chirp/src/main/: AndroidManifest.xml
chirp/src/main/kotlin/com/example/chirp/: ChirpApplication.kt  MainActivity.kt
chirp/src/main/kotlin/com/example/chirp/components/: BlurhashImage.kt  RelaySelector.kt  UserDisplay.kt  VideoPlayer.kt
chirp/src/main/kotlin/com/example/chirp/core/: DispatchersProvider.kt
chirp/src/main/kotlin/com/example/chirp/data/: AppSettingsRepository.kt  RelayPreferencesRepository.kt  RelaySetRepository.kt
chirp/src/main/kotlin/com/example/chirp/di/: BlossomModule.kt  DispatchersModule.kt  NDKModule.kt
chirp/src/main/kotlin/com/example/chirp/models/: ContentType.kt  RelayFilterState.kt
chirp/src/main/kotlin/com/example/chirp/navigation/: Navigation.kt  Routes.kt
chirp/src/main/kotlin/com/example/chirp/util/: TimeUtils.kt
chirp/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
chirp/src/main/res/values/: strings.xml  themes.xml
chirp/src/test/kotlin/com/example/chirp/di/: NDKModuleTest.kt
docs/: developer-tools.md
docs/examples/: reply-quote-repost.md
docs/plans/: 2025-12-10-session-management.md  2025-12-11-image-gallery-design.md  2025-12-11-image-gallery-implementation.md  2025-12-12-active-follows-feed-filtering.md  2025-12-12-outbox-auto-connect-design.md  2025-12-12-relay-bookmarking-design.md
ndk-account-android/: build.gradle.kts
ndk-cache-room/: build.gradle.kts
ndk-compose/: README.md  build.gradle.kts
ndk-core/: build.gradle.kts
ndk-core/src/main/kotlin/io/nostr/ndk/: NDK.kt
ndk-core/src/main/kotlin/io/nostr/ndk/account/: NDKAccountStorage.kt  NDKCurrentUser.kt  SessionData.kt
ndk-core/src/main/kotlin/io/nostr/ndk/blossom/: BlossomClient.kt  BlossomUploadResult.kt  NDKBlossom.kt
ndk-core/src/main/kotlin/io/nostr/ndk/builders/: EventBuilders.kt  ImageBuilder.kt  VideoBuilder.kt
ndk-core/src/main/kotlin/io/nostr/ndk/cache/: InMemoryCacheAdapter.kt  NDKCacheAdapter.kt
ndk-core/src/main/kotlin/io/nostr/ndk/compose/: ComposeExtensions.kt
ndk-core/src/main/kotlin/io/nostr/ndk/content/: ContentExtensions.kt  ContentParser.kt  ContentRendererRegistry.kt  ContentSegment.kt
ndk-core/src/main/kotlin/io/nostr/ndk/crypto/: BunkerUrl.kt  NDKDeferredRemoteSigner.kt  NDKKeyPair.kt  NDKPrivateKeySigner.kt  NDKRemoteSigner.kt  NDKSignatureVerifier.kt  NDKSigner.kt  Nip44.kt  Nip55Signer.kt  (+2 more)
ndk-core/src/test/kotlin/io/nostr/ndk/: NDKTest.kt
ndk-nostrdb/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
ndk-nostrdb/src/main/cpp/: CMakeLists.txt  ndb_jni.c
ndk-nostrdb/src/main/cpp/nostrdb/: hex.h
ndk-nostrdb/src/main/cpp/nostrdb/bolt11/: array_size.h  cursor.h  hex.h  mem.h  node_id.c  short_types.h  tal.h  talstr.h
ndk-signer-amber/: README.md  build.gradle.kts
ndk-signer-amber/src/main/: AndroidManifest.xml
sample-app/: build.gradle.kts
sample-app/src/main/: AndroidManifest.xml
sample-app/src/main/res/drawable/: ic_launcher_foreground.xml
sample-app/src/main/res/values/: strings.xml  themes.xml
(+211 files in other folders)
